All basic intracloud functions tested